# parsec-tray-tool

./: .env.development  .env.production  .firebaserc  .gitignore  LICENSE.txt  README.md  firebase.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  update.json  vite.config.ts
public/assets/css/: style.css  style.css.map
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Settings.vue
src/components/tabs/: ArcadeTab.vue  GuestsTab.vue  HostingTab.vue  SettingsTab.vue
src/models/: GuestStatus.ts  Room.ts  User.ts
src/modules/: Helper.ts
src/sass/: style.scss
src/sass/partials/base/: _base.scss  _button.scss  _fonts.scss  _form.scss  _nav.scss  _table.scss  _variables.scss  _window.scss
src/services/: ArcadeService.ts  EventService.ts  FirebaseService.ts  HostingService.ts  StoreService.ts
