[package]
name = "parsec-tray-tool"
version = "0.0.0"
description = "Parsec Tray Tool"
authors = ["Mickey Dearman"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "system-tray", "clipboard-all", "fs-all", "process-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
serde_json = "1.0"
lazy_static = "1.4"
dirs = "5.0.1"
enigo = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
